--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
          <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
 
+    </dependencies>
+    <build>
+
+    </build>
 
 </project>
